JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job Wait Time irresponsive on MySQL
                 Bugster:   6661473
                 Review:    AP

AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
                            to ju_exit_status

RD-2008-02-04-0: CVS:       Created V62alpha1_TAG
-------------------------------------------------

LP-2008-02-01-0: Cleanup:   Cleanup to use new GetCell functionality (detection)
                 Review:    PJ

JO-2008-02-01-0: Cleanup:  o got rid of 5.3 specific code
                           o got rid of word Please in prompts
                           o changes for consistency
                           o other minor cosmetic changes
                 Review:   PJ    

PJ-2008-01-31-0: Bugfix:    ORDER BY clause ignored in Advanced Query
                 Bugster:   6598005 
                 Issue:     2354
                 Review:    JO

LP-2008-01-25-0: Enhancem.: Improvements to SMF support
                            Cleanup for java 1.5

PJ-2008-01-25-0: Bugfix:    Sort on table column throws exception 
                            if explicit SORT specified in 
                            SimpleQuery Sort on table column
                 Bugster:   6549694
                 Issue:     2344
                 Review:    LP

AP-2008-01-22-0: Bugfix:    deletion rule for PostgreSQL incorrect for deletion 
                            of sge_share_log
                 Bugster:   6653090
                 Issue:     2468
                 Review:    JO

PJ-2008-01-16-0: Bugfix:    Row Limit in Simple Query uses wrong syntax
                 Bugster:   6640762
                 Issue:     2444
                 Review:    JO

LP-2008-01-16-0: Bugfix:    PID file is not automatically removed

PJ-2008-01-16-0: Enhancem.: Change ClusterIndex to ClusterName, ready for unique
                            SGE_CLUSTER_NAME
                 Review:    JO
