@@ -1,3 +1,7 @@
+JO-2008-02-15-0: Bugfix:   Batch failure on Oracle database.
+                 Bugster:  6659300
+                 Review:   PJ
+
 JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job Wait Time irresponsive on MySQL
                  Bugster:   6661473
                  Review:    AP
